--- a/cards-list.html
+++ b/cards-list.html
@@ -16,7 +16,7 @@
     </template>
     <template is="dom-if" if="{{edit}}">
       <sortable-list content="{{cards}}" on-sort-change="reorder">
-        <template is="dom-repeat" items="{{cards}}">
+        <template is="dom-repeat" items="{{cards}}" sort="sortItems">
           <div style="display:inline-block">
             <cards-item index="[[index]]" edit cards="{{item}}"></cards-item>
           </div>
