--- a/cards-list.html
+++ b/cards-list.html
@@ -15,8 +15,8 @@
     </div>
     </template>
     <template is="dom-if" if="{{edit}}">
-      <sortable-list content="{{toSortCards}}" on-sort-change="reorder">
-        <template is="dom-repeat" items="{{toSortCards}}">
+      <sortable-list content="[[toSortCards]]" output="{{sortedCards}}" on-sort-change="reorder">
+        <template is="dom-repeat" items="{{sortedCards}}">
           <div style="display:inline-block">
             <cards-item index="[[index]]" edit cards="{{item}}"></cards-item>
           </div>
