--- a/demo.html
+++ b/demo.html
@@ -4,6 +4,7 @@
     <title>user-cards demo</title>
     <script src="../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="user-cards.html">
+    <link rel="import" href="../paper-toggle-button/paper-toggle-button.html">
   </head>
   <body>
     <template is="dom-bind">
