--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
     <template is="dom-bind">
       <h3>user-cards</h3>
       <user-cards edit="{{edit}}" edit-default="{{editDefault}}" answer folder="marcus7777" location="https://open-elements.firebaseio.com/all/"></user-cards>
-      Edit <paper-toggle-button checked="{{edit}}"></paper-toggle-button>
+      Edit <paper-toggle-button checked="{{edit}}"></paper-toggle-button><br />
       Edit default <paper-toggle-button checked="{{editDefault}}"></paper-toggle-button>
     </template>
   </body>
