--- a/cards-item.html
+++ b/cards-item.html
@@ -10,21 +10,23 @@
 <dom-module id="cards-item">
   <template>
     <paper-material style="height:200px;background:#fff;margin:5px;max-width:150px">
-      <a href="[[cards.url]]" title="[[cards.value]]">
-        <div>
-          <paper-ripple></paper-ripple>
-          <div id="cardtop" style="bheight: 100px; padding: 0 5px 0 5px;">
-            <div class="body1" style="float: left;width:150px">
-              <h3 style="margin: 7px 0 5px 0; color: #333;">[[cards.value]]</h3>
-              <span style="color: #333;">[[cards.title]]</span>
-              <span style="float: right; position:absolute; top: 90px; right: 0px; border-width: 1px; border-top-style: solid; border-left-style: solid; border-bottom-style: solid; padding: 2px; font-size: 10px; border-color: #333; color: #333;">[[cards.type]]</span>
+     <template is="dom-if" if="{{!isDeck}}">
+        <a href="[[cards.url]]" title="[[cards.value]]">
+          <div>
+            <paper-ripple></paper-ripple>
+            <div id="cardtop" style="height:100px;padding:0 5px 0 5px;">
+              <div class="body1" style="float:left;width:150px">
+                <h3 style="margin: 7px 0 5px 0; color: #333;">[[cards.value]]</h3>
+                <span style="color: #333;">[[cards.title]]</span>
+                <span style="float:right; position:absolute; top: 90px; right: 0px; border-width: 1px; border-top-style: solid; border-left-style: solid; border-bottom-style: solid; padding: 2px; font-size: 10px; border-color: #333; color: #333;">[[cards.type]]</span>
+              </div>
+            </div>
+            <div id="pic" style="margin-left: 40px; position: absolute; bottom: 5px;">
+              <iron-image sizing="contain" src="[[cards.image]]" style="border-radius: 50%; border-style: solid; border-color: #d1d1e0; border-width: 1px; height: 70px; width: 70px;"></iron-image>
             </div>
           </div>
-          <div id="pic" style="margin-left: 40px; position: absolute; bottom: 5px;">
-            <iron-image sizing="contain" src="[[cards.image]]" style="border-radius: 50%; border-style: solid; border-color: #d1d1e0; border-width: 1px; height: 70px; width: 70px;"></iron-image>
-          </div>
-        </div>
-      </a>
+        </a>
+      </template>
       <template is="dom-if" if="{{edit}}">
         <paper-dialog modal style="width: 400px;">
           <paper-input value="{{cards.image::change}}" label="Image"></paper-input>
@@ -42,6 +44,26 @@
         </paper-button>
       </template>
     </paper-material>
+    <template is="dom-if" if="{{isDeck}}">
+      <link rel="import" href="../card-deck/card-deck.html">
+      <card-deck>
+        <a href="[[cards.url]]" title="[[cards.value]]">
+          <div>
+            <paper-ripple></paper-ripple>
+            <div id="cardtop" style="height:100px;padding:0 5px 0 5px;">
+              <div class="body1" style="float:left;width:150px">
+                <h3 style="margin: 7px 0 5px 0; color: #333;">[[cards.value]]</h3>
+                <span style="color: #333;">[[cards.title]]</span>
+                <span style="float:right; position:absolute; top: 90px; right: 0px; border-width: 1px; border-top-style: solid; border-left-style: solid; border-bottom-style: solid; padding: 2px; font-size: 10px; border-color: #333; color: #333;">[[cards.type]]</span>
+              </div>
+            </div>
+            <div id="pic" style="margin-left: 40px; position: absolute; bottom: 5px;">
+              <iron-image sizing="contain" src="[[cards.image]]" style="border-radius: 50%; border-style: solid; border-color: #d1d1e0; border-width: 1px; height: 70px; width: 70px;"></iron-image>
+            </div>
+          </div>
+        </a>
+      </card-deck>
+    </template>
   </template>
 </dom-module>
 <script>
