closes https://github.com/Hi9Here/hi9-/issues/55

--- a/cards-input.html
+++ b/cards-input.html
@@ -42,7 +42,10 @@
         title: this.title,
         type: this.type,
         url: this.url,
-        value: this.value
+        value: this.value,
+        position: null,
+        alerts: 0,
+        blob: "",
       })
       this.image = null
       this.title = null
