--- a/cards-view.html
+++ b/cards-view.html
@@ -8,7 +8,7 @@
 <dom-module id="cards-view">
   <template>
     <mediator-data id="c" as-array="{{cards}}" get-until-data location="{{location}}" folder="{{folder}}" default-folder="{{defaultFolder}}"></mediator-data>
-    <cards-list edit="{{edit}}" cards="{{cards}}" on-delete-card="deleteCard"></cards-list>
+    <cards-list selecting="{{selecting}}" edit="{{edit}}" cards="{{cards}}" on-delete-card="deleteCard"></cards-list>
     <template is="dom-if" if="{{edit}}">
       <cards-input edit on-add-cards="addCards"></cards-input>
     </template>
@@ -20,6 +20,7 @@
     properties: {
       cards: Array,
       edit: {type: Boolean, value: false},
+      selecting: {type: Boolean, value: false},
       editDefault: Boolean
     },
     addCards: function(e) {
