--- a/cards-list.html
+++ b/cards-list.html
@@ -10,7 +10,7 @@
       <paper-filter by="type" data="{{cards}}" output="{{output}}" min="2" style="margin: 10px; padding: 5px;"></paper-filter>
       <div id="cardBlock" style="width: 100%;margin: 10px; padding: 5px;">
       <template is="dom-repeat" items="{{output}}">
-        <cards-item style="display:inline-block;" cards="{{item}}"></cards-item>
+        <cards-item selecting="{{selecting}}" index="{{index}}" style="display:inline-block;" cards="{{item}}"></cards-item>
       </template>
     </div>
     </template>
@@ -29,9 +29,10 @@
   Polymer({
     is: 'cards-list',
     properties: {
-      edit:{type: Boolean, value: false},
-      cards:{notify:true},
-      toSortCards: {computed:"getToSortCards(cards)"}
+      edit: {type: Boolean, value: false},
+      cards: {notify: true},
+      toSortCards: {computed: "getToSortCards(cards)"},
+      selecting: {type: Boolean, value: false}
     },
     getToSortCards: function(cards) {
       return cards.sort(this.sortItems)
