--- a/demo.html
+++ b/demo.html
@@ -9,8 +9,9 @@
   <body>
     <template is="dom-bind">
       <h3>user-cards</h3>
-      <user-cards edit="{{edit}}" edit-default="{{editDefault}}" folder="marcus7777" location="https://open-elements.firebaseio.com/all/"></user-cards>
+      <user-cards selecting="{{selecting}}" edit="{{edit}}" edit-default="{{editDefault}}" folder="marcus7777" location="https://open-elements.firebaseio.com/all/"></user-cards>
       Edit <paper-toggle-button checked="{{edit}}"></paper-toggle-button><br />
+      selecting <paper-toggle-button checked="{{selecting}}"></paper-toggle-button><br />
       Edit default <paper-toggle-button checked="{{editDefault}}"></paper-toggle-button>
     </template>
   </body>
