--- a/demo.html
+++ b/demo.html
@@ -45,7 +45,7 @@ Polymer({
             fire:{type:"delete",detail:"confirm"}
           }]
         },
-        {label:"Edit",icon:"create",fire:{type:"edit"}"menu":[
+        {label:"Edit",icon:"create",fire:{type:"edit"},"menu":[
           {label:"Finished Editing",icon:"done",fire:{type:"add",detail:"done"}}
         ]},
         {label:"Add","icon":"add","menu":[
